Fix bug where no aadtadjfactor

--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "[340 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1519,8 +1519,8 @@
        "      <td>2050</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>11846</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23077</th>\n",
@@ -1532,8 +1532,8 @@
        "      <td>2050</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3694</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23078</th>\n",
@@ -1576,14 +1576,14 @@
        "...              ...          ...  \n",
        "23074            0.0          0.0  \n",
        "23075            0.0       7100.0  \n",
-       "23076            NaN          NaN  \n",
-       "23077            NaN          NaN  \n",
+       "23076            0.0      12000.0  \n",
+       "23077            0.0       3700.0  \n",
        "23078            0.0          0.0  \n",
        "\n",
        "[23079 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,6 +1592,7 @@
     "# ADJUST ALL MODEL VOLUMES BASED ON BASE YEAR ADJ FACTOR\n",
     "\n",
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
+    "dfModWithAdj['aadtAdjFactor'].fillna(0,inplace=True)\n",
     "dfModWithAdj['modForecast'] = (dfModWithAdj['modAadt'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding)\n",
     "dfModWithAdj\n",
     "\n",
@@ -1606,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1874,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1912,112 +1913,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>82982.9</td>\n",
-       "      <td>35.0</td>\n",
+       "      <th>7419</th>\n",
+       "      <td>WFRC_8019</td>\n",
+       "      <td>23918.6</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>85540</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>75500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3854</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>99482.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2028</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>102548</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>92500.0</td>\n",
+       "      <td>1.1568</td>\n",
+       "      <td>20676</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7679</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>89741.9</td>\n",
-       "      <td>35.0</td>\n",
+       "      <th>15070</th>\n",
+       "      <td>WFRC_8019</td>\n",
+       "      <td>28251.5</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>92507</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>82500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11471</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>109755.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2032</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>113137</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>103000.0</td>\n",
+       "      <td>1.1568</td>\n",
+       "      <td>24422</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15341</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>123780.1</td>\n",
-       "      <td>23.0</td>\n",
+       "      <th>18967</th>\n",
+       "      <td>WFRC_8019</td>\n",
+       "      <td>31873.8</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2042</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>127595</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>118000.0</td>\n",
+       "      <td>1.1568</td>\n",
+       "      <td>27553</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19246</th>\n",
-       "      <td>0015_345.0</td>\n",
-       "      <td>133603.3</td>\n",
-       "      <td>23.0</td>\n",
+       "      <th>22904</th>\n",
+       "      <td>WFRC_8019</td>\n",
+       "      <td>36193.8</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>Suburban</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2050</td>\n",
-       "      <td>0.9701</td>\n",
-       "      <td>137721</td>\n",
-       "      <td>-10010.0</td>\n",
-       "      <td>128000.0</td>\n",
+       "      <td>1.1568</td>\n",
+       "      <td>31287</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31500.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            SEGID    DY_VOL    FT ATYPENAME  LANES  YEAR  FAC_WDAVG  modAadt  \\\n",
-       "120    0015_345.0   82982.9  35.0  Suburban    6.0  2019     0.9701    85540   \n",
-       "3854   0015_345.0   99482.0  35.0  Suburban    6.0  2028     0.9701   102548   \n",
-       "7679   0015_345.0   89741.9  35.0  Suburban    6.0  2023     0.9701    92507   \n",
-       "11471  0015_345.0  109755.0  35.0  Suburban    6.0  2032     0.9701   113137   \n",
-       "15341  0015_345.0  123780.1  23.0  Suburban    6.0  2042     0.9701   127595   \n",
-       "19246  0015_345.0  133603.3  23.0  Suburban    6.0  2050     0.9701   137721   \n",
+       "           SEGID   DY_VOL    FT ATYPENAME  LANES  YEAR  FAC_WDAVG  modAadt  \\\n",
+       "7419   WFRC_8019  23918.6  33.0  Suburban    4.0  2028     1.1568    20676   \n",
+       "15070  WFRC_8019  28251.5  33.0  Suburban    4.0  2032     1.1568    24422   \n",
+       "18967  WFRC_8019  31873.8  33.0  Suburban    4.0  2042     1.1568    27553   \n",
+       "22904  WFRC_8019  36193.8  33.0  Suburban    4.0  2050     1.1568    31287   \n",
        "\n",
        "       aadtAdjFactor  modForecast  \n",
-       "120         -10010.0      75500.0  \n",
-       "3854        -10010.0      92500.0  \n",
-       "7679        -10010.0      82500.0  \n",
-       "11471       -10010.0     103000.0  \n",
-       "15341       -10010.0     118000.0  \n",
-       "19246       -10010.0     128000.0  "
+       "7419             0.0      20500.0  \n",
+       "15070            0.0      24500.0  \n",
+       "18967            0.0      27500.0  \n",
+       "22904            0.0      31500.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfModWithAdj[dfModWithAdj['SEGID']=='0015_345.0']"
+    "dfModWithAdj[dfModWithAdj['SEGID']=='WFRC_8019']"
    ]
   },
   {
