--- a/2-Prepare-Linear-Forecasts.ipynb
+++ b/2-Prepare-Linear-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,28 +63,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Since 2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>#FF0000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>[5, 5]</td>\n",
-       "      <td>0.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Since 2017</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>#00FF00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>[5, 5]</td>\n",
-       "      <td>0.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Since 1981</td>\n",
        "      <td>1981</td>\n",
        "      <td>2021</td>\n",
@@ -92,10 +70,10 @@
        "      <td>#6948F4</td>\n",
        "      <td>False</td>\n",
        "      <td>[5, 5]</td>\n",
-       "      <td>1.50</td>\n",
+       "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>Since 2011 w/o 2020</td>\n",
        "      <td>2011</td>\n",
        "      <td>2021</td>\n",
@@ -103,21 +81,10 @@
        "      <td>#FF0000</td>\n",
        "      <td>False</td>\n",
        "      <td>[5, 5]</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Since 2016 w/o 2020</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>{2020}</td>\n",
-       "      <td>#00FF00</td>\n",
-       "      <td>True</td>\n",
-       "      <td>[10, 5]</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
        "      <td>2000</td>\n",
        "      <td>2021</td>\n",
@@ -125,7 +92,7 @@
        "      <td>#F28705</td>\n",
        "      <td>True</td>\n",
        "      <td>[10, 5]</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -133,20 +100,14 @@
       ],
       "text/plain": [
        "                pgName  pgYearFrom  pgYearTo pgYearsExclude  pgColor  \\\n",
-       "0           Since 2012        2012      2021             {}  #FF0000   \n",
-       "1           Since 2017        2017      2021             {}  #00FF00   \n",
-       "2           Since 1981        1981      2021             {}  #6948F4   \n",
-       "3  Since 2011 w/o 2020        2011      2021         {2020}  #FF0000   \n",
-       "4  Since 2016 w/o 2020        2016      2021         {2020}  #00FF00   \n",
-       "5  Since 2000 w/o 2020        2000      2021         {2020}  #F28705   \n",
+       "0           Since 1981        1981      2021             {}  #6948F4   \n",
+       "1  Since 2011 w/o 2020        2011      2021         {2020}  #FF0000   \n",
+       "2  Since 2000 w/o 2020        2000      2021         {2020}  #F28705   \n",
        "\n",
        "   pgHidden pgBorderDash  pgBorderWidth  \n",
-       "0      True       [5, 5]           0.25  \n",
-       "1      True       [5, 5]           0.25  \n",
-       "2     False       [5, 5]           1.50  \n",
-       "3     False       [5, 5]           0.50  \n",
-       "4      True      [10, 5]           0.50  \n",
-       "5      True      [10, 5]           0.50  "
+       "0     False       [5, 5]            1.5  \n",
+       "1     False       [5, 5]            0.5  \n",
+       "2      True      [10, 5]            0.5  "
       ]
      },
      "metadata": {},
@@ -155,11 +116,11 @@
    ],
    "source": [
     "dfProjGroupsLinear = pd.DataFrame([\n",
-    "    [\"Since 2012\"         , 2012, 2021,     {}, \"#FF0000\", True ,  [5,5], 0.25],\n",
-    "    [\"Since 2017\"         , 2017, 2021,     {}, \"#00FF00\", True ,  [5,5], 0.25],\n",
+    "#    [\"Since 2012\"         , 2012, 2021,     {}, \"#FF0000\", True ,  [5,5], 0.25],\n",
+    "#    [\"Since 2017\"         , 2017, 2021,     {}, \"#00FF00\", True ,  [5,5], 0.25],\n",
     "    [\"Since 1981\"         , 1981, 2021,     {}, \"#6948F4\", False,  [5,5], 1.50],\n",
     "    [\"Since 2011 w/o 2020\", 2011, 2021, {2020}, \"#FF0000\", False,  [5,5], 0.50],\n",
-    "    [\"Since 2016 w/o 2020\", 2016, 2021, {2020}, \"#00FF00\", True , [10,5], 0.50],\n",
+    "#    [\"Since 2016 w/o 2020\", 2016, 2021, {2020}, \"#00FF00\", True , [10,5], 0.50],\n",
     "    [\"Since 2000 w/o 2020\", 2000, 2021, {2020}, \"#F28705\", True , [10,5], 0.50]\n",
     "], columns=('pgName','pgYearFrom','pgYearTo','pgYearsExclude','pgColor','pgHidden','pgBorderDash','pgBorderWidth'))\n",
     "\n",
@@ -170,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +261,7 @@
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,36 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Since 2012'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Since 2017'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping empty group for SEGID: WFRC_8221, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2017\n",
-      "Skipping empty group for SEGID: WFRC_8222, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2017\n",
-      "Skipping empty group for SEGID: WFRC_8223, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2017\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -360,24 +294,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Since 2016 w/o 2020'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping empty group for SEGID: WFRC_8221, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2016 w/o 2020\n",
-      "Skipping empty group for SEGID: WFRC_8222, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2016 w/o 2020\n",
-      "Skipping empty group for SEGID: WFRC_8223, SOURCE: Segments_WF - 2023-08-01.shp, Projection Group: Since 2016 w/o 2020\n"
-     ]
     },
     {
      "data": {
@@ -421,41 +337,41 @@
        "      <th>0</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
-       "      <td>Since 2012</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>1247</td>\n",
+       "      <td>Since 1981</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
-       "      <td>Since 2012</td>\n",
+       "      <td>Since 1981</td>\n",
        "      <td>2023</td>\n",
-       "      <td>1760</td>\n",
+       "      <td>1570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
-       "      <td>Since 2012</td>\n",
+       "      <td>Since 1981</td>\n",
        "      <td>2028</td>\n",
-       "      <td>1994</td>\n",
+       "      <td>1647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
-       "      <td>Since 2012</td>\n",
+       "      <td>Since 1981</td>\n",
        "      <td>2032</td>\n",
-       "      <td>2181</td>\n",
+       "      <td>1709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
-       "      <td>Since 2012</td>\n",
+       "      <td>Since 1981</td>\n",
        "      <td>2042</td>\n",
-       "      <td>2648</td>\n",
+       "      <td>1863</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -466,7 +382,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266071</th>\n",
+       "      <th>133051</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
@@ -474,7 +390,7 @@
        "      <td>8406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266072</th>\n",
+       "      <th>133052</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
@@ -482,7 +398,7 @@
        "      <td>7275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266073</th>\n",
+       "      <th>133053</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
@@ -490,7 +406,7 @@
        "      <td>6370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266074</th>\n",
+       "      <th>133054</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
@@ -498,7 +414,7 @@
        "      <td>4107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266075</th>\n",
+       "      <th>133055</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 2000 w/o 2020</td>\n",
@@ -507,37 +423,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>266076 rows × 5 columns</p>\n",
+       "<p>133056 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             SEGID                        SOURCE              PROJGRP  YEAR  \\\n",
-       "0       0006_146.9              AADTHistory.xlsx           Since 2012  2012   \n",
-       "1       0006_146.9              AADTHistory.xlsx           Since 2012  2023   \n",
-       "2       0006_146.9              AADTHistory.xlsx           Since 2012  2028   \n",
-       "3       0006_146.9              AADTHistory.xlsx           Since 2012  2032   \n",
-       "4       0006_146.9              AADTHistory.xlsx           Since 2012  2042   \n",
+       "0       0006_146.9              AADTHistory.xlsx           Since 1981  1981   \n",
+       "1       0006_146.9              AADTHistory.xlsx           Since 1981  2023   \n",
+       "2       0006_146.9              AADTHistory.xlsx           Since 1981  2028   \n",
+       "3       0006_146.9              AADTHistory.xlsx           Since 1981  2032   \n",
+       "4       0006_146.9              AADTHistory.xlsx           Since 1981  2042   \n",
        "...            ...                           ...                  ...   ...   \n",
-       "266071   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2023   \n",
-       "266072   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2028   \n",
-       "266073   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2032   \n",
-       "266074   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2042   \n",
-       "266075   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2050   \n",
+       "133051   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2023   \n",
+       "133052   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2028   \n",
+       "133053   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2032   \n",
+       "133054   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2042   \n",
+       "133055   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 2000 w/o 2020  2050   \n",
        "\n",
        "        linForecast  \n",
-       "0              1247  \n",
-       "1              1760  \n",
-       "2              1994  \n",
-       "3              2181  \n",
-       "4              2648  \n",
+       "0               921  \n",
+       "1              1570  \n",
+       "2              1647  \n",
+       "3              1709  \n",
+       "4              1863  \n",
        "...             ...  \n",
-       "266071         8406  \n",
-       "266072         7275  \n",
-       "266073         6370  \n",
-       "266074         4107  \n",
-       "266075         2297  \n",
+       "133051         8406  \n",
+       "133052         7275  \n",
+       "133053         6370  \n",
+       "133054         4107  \n",
+       "133055         2297  \n",
        "\n",
-       "[266076 rows x 5 columns]"
+       "[133056 rows x 5 columns]"
       ]
      },
      "metadata": {},
@@ -609,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +568,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>88686</th>\n",
+       "      <th>0</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
        "      <td>Since 1981</td>\n",
@@ -660,7 +576,7 @@
        "      <td>921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88687</th>\n",
+       "      <th>1</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
        "      <td>Since 1981</td>\n",
@@ -668,7 +584,7 @@
        "      <td>1570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88688</th>\n",
+       "      <th>2</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
        "      <td>Since 1981</td>\n",
@@ -676,7 +592,7 @@
        "      <td>1647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88689</th>\n",
+       "      <th>3</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
        "      <td>Since 1981</td>\n",
@@ -684,7 +600,7 @@
        "      <td>1709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88690</th>\n",
+       "      <th>4</th>\n",
        "      <td>0006_146.9</td>\n",
        "      <td>AADTHistory.xlsx</td>\n",
        "      <td>Since 1981</td>\n",
@@ -700,7 +616,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133033</th>\n",
+       "      <th>44347</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 1981</td>\n",
@@ -708,7 +624,7 @@
        "      <td>8406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133034</th>\n",
+       "      <th>44348</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 1981</td>\n",
@@ -716,7 +632,7 @@
        "      <td>7275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133035</th>\n",
+       "      <th>44349</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 1981</td>\n",
@@ -724,7 +640,7 @@
        "      <td>6370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133036</th>\n",
+       "      <th>44350</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 1981</td>\n",
@@ -732,7 +648,7 @@
        "      <td>4107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133037</th>\n",
+       "      <th>44351</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>Segments_WF - 2023-08-01.shp</td>\n",
        "      <td>Since 1981</td>\n",
@@ -745,36 +661,23 @@
        "</div>"
       ],
       "text/plain": [
-       "             SEGID                        SOURCE     PROJGRP  YEAR  \\\n",
-       "88686   0006_146.9              AADTHistory.xlsx  Since 1981  1981   \n",
-       "88687   0006_146.9              AADTHistory.xlsx  Since 1981  2023   \n",
-       "88688   0006_146.9              AADTHistory.xlsx  Since 1981  2028   \n",
-       "88689   0006_146.9              AADTHistory.xlsx  Since 1981  2032   \n",
-       "88690   0006_146.9              AADTHistory.xlsx  Since 1981  2042   \n",
-       "...            ...                           ...         ...   ...   \n",
-       "133033   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2023   \n",
-       "133034   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2028   \n",
-       "133035   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2032   \n",
-       "133036   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2042   \n",
-       "133037   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2050   \n",
-       "\n",
-       "        linForecast  \n",
-       "88686           921  \n",
-       "88687          1570  \n",
-       "88688          1647  \n",
-       "88689          1709  \n",
-       "88690          1863  \n",
-       "...             ...  \n",
-       "133033         8406  \n",
-       "133034         7275  \n",
-       "133035         6370  \n",
-       "133036         4107  \n",
-       "133037         2297  \n",
+       "            SEGID                        SOURCE     PROJGRP  YEAR  linForecast\n",
+       "0      0006_146.9              AADTHistory.xlsx  Since 1981  1981          921\n",
+       "1      0006_146.9              AADTHistory.xlsx  Since 1981  2023         1570\n",
+       "2      0006_146.9              AADTHistory.xlsx  Since 1981  2028         1647\n",
+       "3      0006_146.9              AADTHistory.xlsx  Since 1981  2032         1709\n",
+       "4      0006_146.9              AADTHistory.xlsx  Since 1981  2042         1863\n",
+       "...           ...                           ...         ...   ...          ...\n",
+       "44347   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2023         8406\n",
+       "44348   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2028         7275\n",
+       "44349   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2032         6370\n",
+       "44350   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2042         4107\n",
+       "44351   WFRC_8263  Segments_WF - 2023-08-01.shp  Since 1981  2050         2297\n",
        "\n",
        "[44352 rows x 5 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
