Make sure ADJHIST is in feature class

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,15 @@
     "from datetime import datetime\n",
     "import arcpy\n",
     "\n",
-    "bRedownloadLatest = False # will download feature class from agol, otherwise will use last download\n",
-    "bExportFeatureClass = False # export feature class\n",
+    "bRedownloadLatest = True # will download feature class from agol, otherwise will use last download\n",
+    "bExportFeatureClass = True # export feature class\n",
     "bClearFlags = False # will clear all flag fields from backup\n",
     "bClearOverrides = False # will clear all override fields from backup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "didn't download... will use latest\n"
+      "Data saved to backup\\forecastsegments_backup_20230913_085430.csv\n"
      ]
     }
    ],
@@ -165,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\logfile_backup_20230907_102222.csv\n"
+      "Data saved to backup\\logfile_backup_20230913_085437.csv\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded backup\\forecastsegments_backup_20230906_182940.csv into a DataFrame\n"
+      "Loaded backup\\forecastsegments_backup_20230913_085430.csv into a DataFrame\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Program Files\\ArcGIS\\Pro\\bin\\Python\\envs\\arcgispro-py3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3437: DtypeWarning: Columns (39,40) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +532,7 @@
        "8600  {\"paths\": [[[422140.650591542, 4538901.3089648...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1067,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30983</th>\n",
+       "      <th>90419</th>\n",
        "      <td>UTA_7132</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1083,7 +1091,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30984</th>\n",
+       "      <th>90420</th>\n",
        "      <td>UTA_7316</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1107,7 +1115,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30985</th>\n",
+       "      <th>90421</th>\n",
        "      <td>UTA_7320</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1131,7 +1139,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30986</th>\n",
+       "      <th>90422</th>\n",
        "      <td>UTA_7328</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1155,7 +1163,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30987</th>\n",
+       "      <th>90423</th>\n",
        "      <td>2322_004.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1180,7 +1188,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30988 rows × 41 columns</p>\n",
+       "<p>90424 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1191,11 +1199,11 @@
        "3      0006_046.0        0.0            0.0    0.0    0.0    0.0    0.0   \n",
        "4      0006_060.2        0.0            0.0    0.0    0.0    0.0    0.0   \n",
        "...           ...        ...            ...    ...    ...    ...    ...   \n",
-       "30983    UTA_7132        0.0            0.0    0.0    0.0    0.0    0.0   \n",
-       "30984    UTA_7316        0.0            0.0    0.0    0.0    0.0    0.0   \n",
-       "30985    UTA_7320        0.0            0.0    0.0    0.0    0.0    0.0   \n",
-       "30986    UTA_7328        0.0            0.0    0.0    0.0    0.0    0.0   \n",
-       "30987  2322_004.5        0.0            0.0    0.0    0.0    0.0    0.0   \n",
+       "90419    UTA_7132        0.0            0.0    0.0    0.0    0.0    0.0   \n",
+       "90420    UTA_7316        0.0            0.0    0.0    0.0    0.0    0.0   \n",
+       "90421    UTA_7320        0.0            0.0    0.0    0.0    0.0    0.0   \n",
+       "90422    UTA_7328        0.0            0.0    0.0    0.0    0.0    0.0   \n",
+       "90423  2322_004.5        0.0            0.0    0.0    0.0    0.0    0.0   \n",
        "\n",
        "       M2042  M2050  MF2019  ...  FL_HIADJ  OV_HIADJ  FL_50LT19  OV_50LT19  \\\n",
        "0        0.0    0.0     0.0  ...     False         0      False          0   \n",
@@ -1204,11 +1212,11 @@
        "3        0.0    0.0     0.0  ...     False         0      False          0   \n",
        "4        0.0    0.0     0.0  ...     False         0      False          0   \n",
        "...      ...    ...     ...  ...       ...       ...        ...        ...   \n",
-       "30983    0.0    0.0     0.0  ...     False         0      False          0   \n",
-       "30984    0.0    0.0     0.0  ...     False         0      False          0   \n",
-       "30985    0.0    0.0     0.0  ...     False         0      False          0   \n",
-       "30986    0.0    0.0     0.0  ...     False         0      False          0   \n",
-       "30987    0.0    0.0     0.0  ...     False         0      False          0   \n",
+       "90419    0.0    0.0     0.0  ...     False         0      False          0   \n",
+       "90420    0.0    0.0     0.0  ...     False         0      False          0   \n",
+       "90421    0.0    0.0     0.0  ...     False         0      False          0   \n",
+       "90422    0.0    0.0     0.0  ...     False         0      False          0   \n",
+       "90423    0.0    0.0     0.0  ...     False         0      False          0   \n",
        "\n",
        "       FL_503X19 OV_503X19 FL_FURREV OV_FURREV  NOTES  NOTES_FURREV  \n",
        "0          False         0     False         0                       \n",
@@ -1217,13 +1225,13 @@
        "3          False         0     False         0                       \n",
        "4          False         0     False         0                       \n",
        "...          ...       ...       ...       ...    ...           ...  \n",
-       "30983      False         0     False         0                       \n",
-       "30984      False         0     False         0                       \n",
-       "30985      False         0     False         0                       \n",
-       "30986      False         0     False         0                       \n",
-       "30987      False         0     False         0                       \n",
+       "90419      False         0     False         0                       \n",
+       "90420      False         0     False         0                       \n",
+       "90421      False         0     False         0                       \n",
+       "90422      False         0     False         0                       \n",
+       "90423      False         0     False         0                       \n",
        "\n",
-       "[30988 rows x 41 columns]"
+       "[90424 rows x 41 columns]"
       ]
      },
      "execution_count": 19,
@@ -1383,35 +1391,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30983</th>\n",
+       "      <th>90419</th>\n",
        "      <td>UTA_7132</td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30984</th>\n",
+       "      <th>90420</th>\n",
        "      <td>UTA_7316</td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30985</th>\n",
+       "      <th>90421</th>\n",
        "      <td>UTA_7320</td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30986</th>\n",
+       "      <th>90422</th>\n",
        "      <td>UTA_7328</td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30987</th>\n",
+       "      <th>90423</th>\n",
        "      <td>2322_004.5</td>\n",
        "      <td></td>\n",
        "      <td>False</td>\n",
@@ -1419,7 +1427,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30988 rows × 4 columns</p>\n",
+       "<p>90424 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1430,13 +1438,13 @@
        "3      0006_046.0                   False          0\n",
        "4      0006_060.2                   False          0\n",
        "...           ...          ...        ...        ...\n",
-       "30983    UTA_7132                   False          0\n",
-       "30984    UTA_7316                   False          0\n",
-       "30985    UTA_7320                   False          0\n",
-       "30986    UTA_7328                   False          0\n",
-       "30987  2322_004.5                   False          0\n",
+       "90419    UTA_7132                   False          0\n",
+       "90420    UTA_7316                   False          0\n",
+       "90421    UTA_7320                   False          0\n",
+       "90422    UTA_7328                   False          0\n",
+       "90423  2322_004.5                   False          0\n",
        "\n",
-       "[30988 rows x 4 columns]"
+       "[90424 rows x 4 columns]"
       ]
      },
      "execution_count": 20,
@@ -1457,7 +1465,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not exported\n"
+      "Feature class ForecastSegments_20230913_085456 created in backup\\Forecasts_backup.gdb\n",
+      "Feature class ForecastSegments created in results\\Forecasts.gdb\n"
      ]
     }
    ],
@@ -1501,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1568,10 +1577,10 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>DUPLICATE SEGID!!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3770</th>\n",
@@ -1694,7 +1703,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8912</th>\n",
+       "      <th>9232</th>\n",
        "      <td>1438_000.9</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3066.0</td>\n",
@@ -1718,7 +1727,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8913</th>\n",
+       "      <th>9233</th>\n",
        "      <td>1438_000.9</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3066.0</td>\n",
@@ -1742,7 +1751,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8914</th>\n",
+       "      <th>9234</th>\n",
        "      <td>1438_000.9</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3066.0</td>\n",
@@ -1766,7 +1775,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8915</th>\n",
+       "      <th>9235</th>\n",
        "      <td>1438_000.9</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3066.0</td>\n",
@@ -1790,7 +1799,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8916</th>\n",
+       "      <th>9236</th>\n",
        "      <td>1438_000.9</td>\n",
        "      <td>1.0924</td>\n",
        "      <td>3066.0</td>\n",
@@ -1815,7 +1824,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>128 rows × 41 columns</p>\n",
+       "<p>256 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1826,11 +1835,11 @@
        "3772  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
        "3773  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
        "...          ...        ...            ...     ...     ...     ...     ...   \n",
-       "8912  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
-       "8913  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
-       "8914  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
-       "8915  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
-       "8916  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
+       "9232  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
+       "9233  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
+       "9234  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
+       "9235  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
+       "9236  1438_000.9     1.0924         3066.0  5442.0  5701.0  6964.0  1253.0   \n",
        "\n",
        "       M2042   M2050  MF2019  ...  FL_HIADJ  OV_HIADJ  FL_50LT19  OV_50LT19  \\\n",
        "3769  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
@@ -1839,29 +1848,29 @@
        "3772  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
        "3773  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
        "...      ...     ...     ...  ...       ...       ...        ...        ...   \n",
-       "8912  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
-       "8913  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
-       "8914  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
-       "8915  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
-       "8916  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
+       "9232  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
+       "9233  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
+       "9234  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
+       "9235  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
+       "9236  1266.0  6427.0  8500.0  ...     False         0      False          0   \n",
        "\n",
-       "      FL_503X19 OV_503X19 FL_FURREV OV_FURREV  NOTES  NOTES_FURREV  \n",
-       "3769      False         0     False         0                       \n",
-       "3770      False         0     False         0                       \n",
-       "3771      False         0     False         0                       \n",
-       "3772      False         0     False         0                       \n",
-       "3773      False         0     False         0                       \n",
-       "...         ...       ...       ...       ...    ...           ...  \n",
-       "8912      False         0     False         0                       \n",
-       "8913      False         0     False         0                       \n",
-       "8914      False         0     False         0                       \n",
-       "8915      False         0     False         0                       \n",
-       "8916      False         0     False         0                       \n",
+       "      FL_503X19 OV_503X19 FL_FURREV OV_FURREV  NOTES       NOTES_FURREV  \n",
+       "3769      False         0      True         0         DUPLICATE SEGID!!  \n",
+       "3770      False         0     False         0                            \n",
+       "3771      False         0     False         0                            \n",
+       "3772      False         0     False         0                            \n",
+       "3773      False         0     False         0                            \n",
+       "...         ...       ...       ...       ...    ...                ...  \n",
+       "9232      False         0     False         0                            \n",
+       "9233      False         0     False         0                            \n",
+       "9234      False         0     False         0                            \n",
+       "9235      False         0     False         0                            \n",
+       "9236      False         0     False         0                            \n",
        "\n",
-       "[128 rows x 41 columns]"
+       "[256 rows x 41 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1884,15 +1893,22 @@
        "       'UTA_7121', 'UTA_7221'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "duplicated_segid = sdfSegmentsWData[sdfSegmentsWData.duplicated('SEGID', keep=False)]['SEGID'].unique()\n",
-    "duplicates.unique()"
+    "duplicated_segid"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
