Unhide projection groups

--- a/2-Prepare-Linear-Forecasts.ipynb
+++ b/2-Prepare-Linear-Forecasts.ipynb
@@ -90,7 +90,7 @@
        "      <td>2021</td>\n",
        "      <td>{2020}</td>\n",
        "      <td>#F28705</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>[10, 5]</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -107,7 +107,7 @@
        "   pgHidden pgBorderDash  pgBorderWidth  \n",
        "0     False       [5, 5]            1.5  \n",
        "1     False       [5, 5]            0.5  \n",
-       "2      True      [10, 5]            0.5  "
+       "2     False      [10, 5]            0.5  "
       ]
      },
      "metadata": {},
@@ -121,7 +121,7 @@
     "    [\"Since 1981\"         , 1981, 2021,     {}, \"#6948F4\", False,  [5,5], 1.50],\n",
     "    [\"Since 2011 w/o 2020\", 2011, 2021, {2020}, \"#FF0000\", False,  [5,5], 0.50],\n",
     "#    [\"Since 2016 w/o 2020\", 2016, 2021, {2020}, \"#00FF00\", True , [10,5], 0.50],\n",
-    "    [\"Since 2000 w/o 2020\", 2000, 2021, {2020}, \"#F28705\", True , [10,5], 0.50]\n",
+    "    [\"Since 2000 w/o 2020\", 2000, 2021, {2020}, \"#F28705\", False , [10,5], 0.50]\n",
     "], columns=('pgName','pgYearFrom','pgYearTo','pgYearsExclude','pgColor','pgHidden','pgBorderDash','pgBorderWidth'))\n",
     "\n",
     "dfProjGroupsLinear.to_csv('intermediate/projection-groups.csv', index=False)\n",
