--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -13,8 +13,8 @@
     "from datetime import datetime\n",
     "import arcpy\n",
     "\n",
-    "bRedownloadLatest = True # will download feature class from agol, otherwise will use last download\n",
-    "bExportFeatureClass = True # export feature class\n",
+    "bRedownloadLatest = False # will download feature class from agol, otherwise will use last download\n",
+    "bExportFeatureClass = False # export feature class\n",
     "bClearFlags = False # will clear all flag fields from backup\n",
     "bClearOverrides = False # will clear all override fields from backup"
    ]
