--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\logfile_backup_20230925_133219.csv\n"
+      "Data saved to backup\\logfile_backup_20230925_162541.csv\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "[8722 rows x 42 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "[8722 rows x 4 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,11 +1170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "manualoverride = True\n",
+    "manualoverride = False\n",
     "\n",
     "if manualoverride: \n",
     "# fix manually:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,14 +1196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature class ForecastSegments_20230925_133423 created in backup\\Forecasts_backup.gdb\n",
+      "Feature class ForecastSegments_20230925_162546 created in backup\\Forecasts_backup.gdb\n",
       "Feature class ForecastSegments created in results\\Forecasts.gdb\n"
      ]
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
        "[1 rows x 44 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
        "array([], dtype=object)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,12 +1422,352 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export segment JSON\n",
-    "sdfSegmentsWData[['SEGID','PLANAREA','F_AREA','SUBAREAID']].to_json('_site/data/segments.json', orient='records')"
+    "jsonSegment = sdfSegmentsWData[['SEGID','PLANAREA','SUBAREAID','CO_NAME','F_AREA']]\n",
+    "\n",
+    "jsonSegment.to_json('_site/data/segments.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F_AREA</th>\n",
+       "      <th>CO_NAME</th>\n",
+       "      <th>SUBAREAID</th>\n",
+       "      <th>numSegs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>2</td>\n",
+       "      <td>489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dixie</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>3</td>\n",
+       "      <td>613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iron</td>\n",
+       "      <td>Iron</td>\n",
+       "      <td>5</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MAG</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MAG</td>\n",
+       "      <td>Wasatch</td>\n",
+       "      <td>4</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>No County</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>No County</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>No County</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>No County</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Summit</td>\n",
+       "      <td>Summit</td>\n",
+       "      <td>4</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Beaver</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Box Elder</td>\n",
+       "      <td>0</td>\n",
+       "      <td>196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Carbon</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Daggett</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Duchesne</td>\n",
+       "      <td>0</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Emery</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Garfield</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Grand</td>\n",
+       "      <td>0</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Juab</td>\n",
+       "      <td>0</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Kane</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Millard</td>\n",
+       "      <td>0</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Morgan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Piute</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Rich</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Sanpete</td>\n",
+       "      <td>0</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Sevier</td>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Tooele</td>\n",
+       "      <td>0</td>\n",
+       "      <td>326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Uintah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Wayne</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>UDOT</td>\n",
+       "      <td>Weber</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>WFRC</td>\n",
+       "      <td>Box Elder</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>WFRC</td>\n",
+       "      <td>Davis</td>\n",
+       "      <td>1</td>\n",
+       "      <td>482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>WFRC</td>\n",
+       "      <td>Salt Lake</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>WFRC</td>\n",
+       "      <td>Weber</td>\n",
+       "      <td>1</td>\n",
+       "      <td>534</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       F_AREA     CO_NAME  SUBAREAID  numSegs\n",
+       "0       Cache       Cache          2      489\n",
+       "1       Dixie  Washington          3      613\n",
+       "2        Iron        Iron          5      248\n",
+       "3         MAG        Utah          1     1398\n",
+       "4         MAG     Wasatch          4      174\n",
+       "5   No County                      0        3\n",
+       "6   No County                      1      129\n",
+       "7   No County                      3        2\n",
+       "8   No County                      5        1\n",
+       "9      Summit      Summit          4      205\n",
+       "10       UDOT      Beaver          0       96\n",
+       "11       UDOT   Box Elder          0      196\n",
+       "12       UDOT       Cache          0        1\n",
+       "13       UDOT      Carbon          0      166\n",
+       "14       UDOT     Daggett          0       24\n",
+       "15       UDOT    Duchesne          0      185\n",
+       "16       UDOT       Emery          0      121\n",
+       "17       UDOT    Garfield          0       79\n",
+       "18       UDOT       Grand          0       94\n",
+       "19       UDOT        Juab          0      102\n",
+       "20       UDOT        Kane          0       65\n",
+       "21       UDOT     Millard          0      168\n",
+       "22       UDOT      Morgan          0       40\n",
+       "23       UDOT       Piute          0       39\n",
+       "24       UDOT        Rich          0       36\n",
+       "25       UDOT    San Juan          0      152\n",
+       "26       UDOT     Sanpete          0      161\n",
+       "27       UDOT      Sevier          0      205\n",
+       "28       UDOT      Tooele          0      326\n",
+       "29       UDOT      Uintah          0      220\n",
+       "30       UDOT       Wayne          0       61\n",
+       "31       UDOT       Weber          0       36\n",
+       "32       WFRC   Box Elder          1      120\n",
+       "33       WFRC       Davis          1      482\n",
+       "34       WFRC   Salt Lake          1     1751\n",
+       "35       WFRC       Weber          1      534"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsonSegment.groupby(['F_AREA','CO_NAME','SUBAREAID'],as_index=False).agg(numSegs=('SEGID','count'))"
    ]
   }
  ],
